Fix error message alignment for change password form (#3868)
Inline error messages

Fixes https://github.com/HyphaApp/hypha/issues/3842

--- a/hypha/static_src/sass/components/_form.scss
+++ b/hypha/static_src/sass/components/_form.scss
@@ -35,6 +35,7 @@
     &--error-inline {
         // stylelint-disable-next-line selector-class-pattern
         .form__error-text {
+            padding-left: 0.5rem;
             position: relative;
             max-width: 100%;
 
